Brief data initialization + Controller/service created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:h2:mem:storedb;DATABASE_TO_UPPER=false
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
+spring.h2.console.enabled=true
+# default path: h2-console
+spring.h2.console.path=/h2-ui
 
