--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
